--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,6 @@ markdown_extensions:
   - tables
   - toc:
       permalink: true
-      toc_depth: 3
+      toc_depth: 1-2
   - pymdownx.tasklist:
       custom_checkbox: true
