--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,14 @@ theme:
   features:
     - navigation.tabs
     - navigation.sections
+    - navigation.instant
+  palette:
+    scheme: default
+  language: fr
+extra_javascript:
+  - javascripts/extra.js
+extra_css:
+  - stylesheets/extra.css
 nav:
   - Accueil: index.md 
   - Conception: 
