add section environnement

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,6 +30,10 @@ nav:
   - Documentation: 
     - Introduction: documentation/index.md
     - Documentation API: documentation/api.md
+  - Environnement & Outils:
+    - Créer un environnement Python: docs/env/python.md
+    - Checklist de production: docs/env/checklist.md
+    - Projet partiellement terminé : docs/env/incomplet.md
 markdown_extensions:
   - admonition
   - pymdownx.emoji:
