--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,8 @@ theme:
     - navigation.instant
   palette:
     scheme: default
+    primary: red
+    accent: red
   language: fr
 extra_javascript:
   - javascripts/extra.js
